--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@ body::before{
   color:#fff;
   cursor:pointer;
 }
+/* ===== MOBILE FIX ===== */
+@media (max-width: 768px){
+  .book{
+    width: 92vw;      /* chiếm gần hết ngang màn hình */
+    height: 88vh;     /* cao vừa đủ để đọc */
+  }
+
+  body{
+    align-items: center;
+  }
+}
+
 </style>
 </head>
 
