--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@ body::before{
     align-items: center;
   }
 }
-
+@media (max-width: 768px){
+  .book{
+    width: 96vw;
+    height: calc(100vh - 20px);
+    margin-top: 10px;
+  }
+}
 </style>
 </head>
 
